--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.idea/*
+build
+*.iml
+.DS_Store
+/logs
+/*/logs
+/logback
+/*/logback
+.idea
+*target*
+
