--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,8 @@
 	</filter-mapping>
 
 	<listener>
-		<listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener
+		<listener-class>
+			ch.qos.logback.ext.spring.web.LogbackConfigListener
 		</listener-class>
 	</listener>
 
