--- a/pom.xml
+++ b/pom.xml
@@ -11,68 +11,37 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.springframework.version>4.3.6.RELEASE</org.springframework.version>
-		<aopalliance.version>1.0</aopalliance.version>
 		<aspectj.version>1.8.9</aspectj.version>
-		<quartz.version>2.2.3</quartz.version>
-		<shiro.version>1.3.2</shiro.version>
-		<jjwt.version>0.7.0</jjwt.version>
-		<jcaptcha.version>2.0</jcaptcha.version>
-
-		<javax.el.vesion>2.2</javax.el.vesion>
-		<javax.validation.version>1.1.0.Final</javax.validation.version>
-		<hibernate.validator.version>5.3.0.Final</hibernate.validator.version>
-
 		<druid.version>1.1.9</druid.version>
-		<jsqlparser.version>0.9.5</jsqlparser.version>
 		<mybatis.version>3.4.5</mybatis.version>
 		<mybatis-spring.version>1.3.1</mybatis-spring.version>
-		<ognl.version>3.2</ognl.version>
-
 		<javax.servlet-api.version>3.1.0</javax.servlet-api.version>
-		<javax.servlet.jsp-api.version>2.3.1</javax.servlet.jsp-api.version>
 		<jstl.version>1.2</jstl.version>
-
-		<guava.version>19.0</guava.version>
-		<commons-beanutils.version>1.9.2</commons-beanutils.version>
-		<commons-codec.version>1.10</commons-codec.version>
-		<commons-io.version>2.5</commons-io.version>
 		<commons-lang3.version>3.5</commons-lang3.version>
-		<commons-httpclient.version>3.1</commons-httpclient.version>
-		<commons-fileupload.version>1.3.2</commons-fileupload.version>
-		<commons-net.version>3.6</commons-net.version>
-		<poi.version>3.15</poi.version>
-		<ooxml.version>1.3</ooxml.version>
-
-		<gson.version>2.7</gson.version>
-		<dom4j.version>1.6.1</dom4j.version>
-		<UserAgentUtils.version>1.19</UserAgentUtils.version>
-		<jpinyin.version>1.1.7</jpinyin.version>
-		<thumbnailator.version>0.4.8</thumbnailator.version>
-
-		<ehcache.version>2.6.11</ehcache.version>
-		<redisson.version>3.6.3</redisson.version>
-		<netty.version>4.1.16.Final</netty.version>
-
-		<rocketmq.version>4.2.0</rocketmq.version>
-
-		<dubbo.version>2.6.1</dubbo.version>
-		<curator.version>2.12.0</curator.version>
-
-		<sigar.version>1.6.4</sigar.version>
-		<slf4j.version>1.7.25</slf4j.version>
 		<logback.version>1.2.2</logback.version>
 		<logback-extensions.version>0.1.5</logback-extensions.version>
 		<jackson.version>2.9.5</jackson.version>
 		<mysql-connector-java.version>5.1.39</mysql-connector-java.version>
+		<junit.version>4.12</junit.version>
+		<freemarker.version>2.3.28</freemarker.version>
+		<swagger-springmvc.version>1.0.2</swagger-springmvc.version>
 	</properties>
 
 	<dependencies>
+		<!-- region 测试相关 start -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- endregion 测试相关 end -->
 
 		<dependency>
 			<groupId>jstl</groupId>
@@ -157,7 +126,7 @@
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
-			<version>2.3.28</version>
+			<version>${freemarker.version}</version>
 		</dependency>
 
 		<dependency>
@@ -169,7 +138,7 @@
 		<dependency>
 			<groupId>com.mangofactory</groupId>
 			<artifactId>swagger-springmvc</artifactId>
-			<version>1.0.2</version>
+			<version>${swagger-springmvc.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -184,6 +153,14 @@
 					<source>1.8</source>
 					<target>1.8</target>
 					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<!-- 编译的时候跳过测试类 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
 				</configuration>
 			</plugin>
 		</plugins>
