--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
 #参考 https://github.com/alibaba/druid/wiki/%E9%85%8D%E7%BD%AE_DruidDataSource%E5%8F%82%E8%80%83%E9%85%8D%E7%BD%AE
 #数据库基础配置
-jdbc.url=jdbc:mysql://10.40.128.42:3306/pay_core?useUnicode=true&amp;characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=123456
+jdbc.url=jdbc:mysql://60.190.227.170:23306/pay_core?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.username=bwt_dev_name
+jdbc.password=bwt_dev_pass
 #配置初始化大小、最小、最大
 jdbc.initialSize=3
 jdbc.minIdle=20
