--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -23,3 +23,7 @@ jdbc.testOnReturn=false
 #jdbc.maxPoolPreparedStatementPerConnectionSize=20
 #配置监控统计拦截的filters
 jdbc.filters=stat,slf4j
+
+jdbc.url2=jdbc:mysql://127.0.0.1:3306/pay_core?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.username2=root
+jdbc.password2=123456
