--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>SpringMVC</finalName>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
