--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -24,6 +24,6 @@ jdbc.testOnReturn=false
 #配置监控统计拦截的filters
 jdbc.filters=stat,slf4j
 
-jdbc.url2=jdbc:mysql://127.0.0.1:3306/pay_core?useUnicode=true&amp;characterEncoding=utf-8
-jdbc.username2=root
-jdbc.password2=123456
+jdbc.url2=jdbc:mysql://60.190.227.170:23306/pay_core?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.username2=bwt_dev_name
+jdbc.password2=bwt_dev_pass
